--- a/solana/Cargo.toml
+++ b/solana/Cargo.toml
@@ -11,7 +11,7 @@ authors = ["Wormhole Contributors"]
 
 [workspace.dependencies]
 anchor-lang = "0.29.0"
-solana-program = "=1.16.27"
+solana-program = "1.17.20"
 
 [profile.release]
 overflow-checks = true
