--- a/solana/programs/swap-layer/Cargo.toml
+++ b/solana/programs/swap-layer/Cargo.toml
@@ -21,4 +21,5 @@ integration-test = []
 
 [dependencies]
 anchor-lang = { workspace = true, features = ["init-if-needed"] }
+anchor-spl.workspace = true
 solana-program.workspace = true
