solana: remove copied ts files and add common dependency

--- a/solana/programs/swap-layer/Cargo.toml
+++ b/solana/programs/swap-layer/Cargo.toml
@@ -21,6 +21,7 @@ integration-test = ["localnet"]
 
 [dependencies]
 token-router.workspace = true
+common.workspace = true
 
 anchor-lang = { workspace = true, features = ["init-if-needed"] }
 anchor-spl.workspace = true
