universal: add messages

--- a/solana/Makefile
+++ b/solana/Makefile
@@ -22,16 +22,16 @@ lint:
 	cargo fmt --check
 	$(MAKE) clippy
 
-lib/example-liquidity-layer/solana/Cargo.toml:
-	git submodule update --init --recursive
-
 .PHONY: cargo-test
 cargo-test:
 	cargo test --workspace --all-targets --features $(NETWORK) -- --nocapture
 
 .PHONY: integration-test
-integration-test: node_modules lib/example-liquidity-layer/solana/Cargo.toml
+integration-test: node_modules ../lib/example-liquidity-layer/solana/node_modules
 	anchor test --arch sbf -- --features integration-test
+
+../lib/example-liquidity-layer/solana/node_modules:
+	cd .. && $(MAKE) lib/example-liquidity-layer/solana/node_modules
 
 .PHONY: test
 test:
