--- a/universal/rs/Cargo.toml
+++ b/universal/rs/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "programs/swap-layer"
+    "messages"
 ]
 resolver = "2"
 
@@ -12,42 +12,13 @@ license = "Apache-2.0"
 homepage = "https://https://github.com/xlabs"
 repository = "https://github.com/xlabs/swap-layer"
 
-[workspace.dependencies.common]
-package = "liquidity-layer-common-solana"
-path = "../lib/example-liquidity-layer/solana/modules/common"
-
-[workspace.dependencies.token-router]
-path = "../lib/example-liquidity-layer/solana/programs/token-router"
-features = ["cpi"]
-
-[workspace.dependencies.matching-engine]
-path = "../lib/example-liquidity-layer/solana/programs/matching-engine"
-features = ["no-entrypoint"]
+[workspace.dependencies.liquidity-layer-messages]
+path = "../../lib/example-liquidity-layer/universal/rs/messages"
 
 [workspace.dependencies]
-swap-layer-messages = { path = "../universal/rs/messages" }
-anchor-lang = "=0.29.0"
-anchor-spl = "=0.29.0"
-solana-program = "=1.17.20"
-hex = "0.4.3"
+wormhole-io = "0.1.2"
 ruint = "1.9.0"
-cfg-if = "1.0"
 hex-literal = "0.4.1"
-
-wormhole-raw-vaas = "0.2.0-alpha.2"
-wormhole-solana-consts = "0.2.0-alpha.11"
-wormhole-solana-utils = "0.2.0-alpha.15"
-wormhole-cctp-solana = "0.1.0-alpha.6"
-
-[profile.release]
-overflow-checks = true
-lto = "fat"
-codegen-units = 1
-
-[profile.release.build-override]
-opt-level = 3
-incremental = false
-codegen-units = 1
 
 [workspace.lints.clippy]
 correctness = { level = "warn"}
