--- a/universal/rs/messages/Cargo.toml
+++ b/universal/rs/messages/Cargo.toml
@@ -7,10 +7,11 @@ license.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
 
 [dependencies]
-common.workspace = true
+liquidity-layer-messages.workspace = true
 ruint.workspace = true
 
 [dev-dependencies]
