--- a/solana/package.json
+++ b/solana/package.json
@@ -10,9 +10,9 @@
         "@solana/spl-token": "^0.4.3",
         "@solana/web3.js": "^1.91.6",
         "@types/node-fetch": "^2.6.11",
-        "@wormhole-foundation/connect-sdk-evm": "^0.4.0-beta.0",
-        "@wormhole-foundation/sdk-base": "^0.4.0-beta.0",
-        "@wormhole-foundation/sdk-definitions": "^0.4.0-beta.0",
+        "@wormhole-foundation/sdk-base": "^0.5.3",
+        "@wormhole-foundation/sdk-definitions": "^0.5.3",
+        "@wormhole-foundation/sdk-evm": "^0.5.3",
         "chai-as-promised": "^7.1.1",
         "ts-results": "^3.3.0"
     },
@@ -20,6 +20,7 @@
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
+        "@types/node": "^20.12.7",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
