--- a/solana/Anchor.toml
+++ b/solana/Anchor.toml
@@ -22,10 +22,10 @@ cluster = "Localnet"
 wallet = "ts/tests/keys/pFCBP4bhqdSsrWUVTgqhPsLrfEdChBK17vgFM7TxjxQ.json"
 
 [scripts]
-test = "npx ts-mocha -p ./tsconfig.anchor-test.json -t 1000000 ts/tests/[0-9]*.ts"
+test = "npm run test"
 
 [test]
-startup_wait = 20000
+startup_wait = 1000000
 
 [test.validator]
 url = "https://api.mainnet-beta.solana.com"
