universal: add anchor feature

--- a/universal/rs/messages/Cargo.toml
+++ b/universal/rs/messages/Cargo.toml
@@ -8,11 +8,16 @@ homepage.workspace = true
 repository.workspace = true
 
 [features]
-default = []
+default = ["idl-build"]
+anchor = ["dep:anchor-lang"]
+idl-build = ["anchor", "anchor-lang/idl-build"]
 
 [dependencies]
 liquidity-layer-messages.workspace = true
+wormhole-io.workspace = true
 ruint.workspace = true
+
+anchor-lang = { workspace = true, optional = true }
 
 [dev-dependencies]
 hex-literal.workspace = true
