--- a/universal/rs/Cargo.toml
+++ b/universal/rs/Cargo.toml
@@ -16,9 +16,10 @@ repository = "https://github.com/xlabs/swap-layer"
 path = "../../lib/example-liquidity-layer/universal/rs/messages"
 
 [workspace.dependencies]
-wormhole-io = "0.1.2"
+wormhole-io = "0.1.3"
 ruint = "1.9.0"
 hex-literal = "0.4.1"
+anchor-lang = ">=0.29.0"
 
 [workspace.lints.clippy]
 correctness = { level = "warn"}
