--- a/solana/Cargo.toml
+++ b/solana/Cargo.toml
@@ -24,8 +24,11 @@ features = ["cpi"]
 path = "../lib/example-liquidity-layer/solana/programs/matching-engine"
 features = ["no-entrypoint"]
 
+[workspace.dependencies.swap-layer-messages]
+path = "../universal/rs/messages"
+features = ["anchor"]
+
 [workspace.dependencies]
-swap-layer-messages = { path = "../universal/rs/messages" }
 anchor-lang = "=0.29.0"
 anchor-spl = "=0.29.0"
 solana-program = "=1.17.20"
