--- a/universal/rs/messages/Cargo.toml
+++ b/universal/rs/messages/Cargo.toml
@@ -8,7 +8,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [features]
-default = ["idl-build"]
+default = []
 anchor = ["dep:anchor-lang"]
 idl-build = ["anchor", "anchor-lang/idl-build"]
 
