--- a/universal/rs/Cargo.toml
+++ b/universal/rs/Cargo.toml
@@ -16,10 +16,11 @@ repository = "https://github.com/xlabs/swap-layer"
 path = "../../lib/example-liquidity-layer/universal/rs/messages"
 
 [workspace.dependencies]
-wormhole-io = "0.1.3"
+wormhole-io = "0.3.0-alpha.1"
 ruint = "1.9.0"
 hex-literal = "0.4.1"
-anchor-lang = ">=0.29.0"
+anchor-lang = "0.30.0"
+solana-program = "1.18.11"
 
 [workspace.lints.clippy]
 correctness = { level = "warn"}
